--- a/03_ssd1306/pca10056/blank/arm5_no_packs/ssd1306_pca10056.uvprojx
+++ b/03_ssd1306/pca10056/blank/arm5_no_packs/ssd1306_pca10056.uvprojx
@@ -136,7 +136,7 @@
             <DriverSelection>4099</DriverSelection>
           </Flash1>
           <bUseTDR>1</bUseTDR>
-          <Flash2>Segger\JL2CM3.dll</Flash2>
+          <Flash2>BIN\UL2CM3.DLL</Flash2>
           <Flash3></Flash3>
           <Flash4></Flash4>
           <pFcarmOut></pFcarmOut>
@@ -335,7 +335,7 @@
               <MiscControls>--reduce_paths</MiscControls>
               <Define>BOARD_PCA10056 BSP_DEFINES_ONLY CONFIG_GPIO_AS_PINRESET NRF52840_XXAA</Define>
               <Undefine></Undefine>
-              <IncludePath>D:\nRF5_SDK_14.0.0\components;D:\nRF5_SDK_14.0.0\components\boards;D:\nRF5_SDK_14.0.0\components\drivers_nrf\common;D:\nRF5_SDK_14.0.0\components\drivers_nrf\delay;D:\nRF5_SDK_14.0.0\components\drivers_nrf\hal;D:\nRF5_SDK_14.0.0\components\drivers_nrf\nrf_soc_nosd;D:\nRF5_SDK_14.0.0\components\drivers_nrf\uart;D:\nRF5_SDK_14.0.0\components\libraries\atomic;D:\nRF5_SDK_14.0.0\components\libraries\balloc;D:\nRF5_SDK_14.0.0\components\libraries\bsp;D:\nRF5_SDK_14.0.0\components\libraries\experimental_log;D:\nRF5_SDK_14.0.0\components\libraries\experimental_log\src;D:\nRF5_SDK_14.0.0\components\libraries\experimental_memobj;D:\nRF5_SDK_14.0.0\components\libraries\experimental_section_vars;D:\nRF5_SDK_14.0.0\components\libraries\fifo;D:\nRF5_SDK_14.0.0\components\libraries\strerror;D:\nRF5_SDK_14.0.0\components\libraries\uart;D:\nRF5_SDK_14.0.0\components\libraries\util;D:\nRF5_SDK_14.0.0\components\toolchain;..\config;..\..\..\..\00_lib</IncludePath>
+              <IncludePath>D:\nRF5_SDK_14.0.0\components;D:\nRF5_SDK_14.0.0\components\boards;D:\nRF5_SDK_14.0.0\components\drivers_nrf\common;D:\nRF5_SDK_14.0.0\components\drivers_nrf\delay;D:\nRF5_SDK_14.0.0\components\drivers_nrf\hal;D:\nRF5_SDK_14.0.0\components\drivers_nrf\nrf_soc_nosd;D:\nRF5_SDK_14.0.0\components\drivers_nrf\uart;D:\nRF5_SDK_14.0.0\components\libraries\atomic;D:\nRF5_SDK_14.0.0\components\libraries\balloc;D:\nRF5_SDK_14.0.0\components\libraries\bsp;D:\nRF5_SDK_14.0.0\components\libraries\experimental_log;D:\nRF5_SDK_14.0.0\components\libraries\experimental_log\src;D:\nRF5_SDK_14.0.0\components\libraries\experimental_memobj;D:\nRF5_SDK_14.0.0\components\libraries\experimental_section_vars;D:\nRF5_SDK_14.0.0\components\libraries\fifo;D:\nRF5_SDK_14.0.0\components\libraries\strerror;D:\nRF5_SDK_14.0.0\components\libraries\uart;D:\nRF5_SDK_14.0.0\components\libraries\util;D:\nRF5_SDK_14.0.0\components\toolchain;..\config</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -468,16 +468,6 @@
               <FileName>retarget.c</FileName>
               <FileType>1</FileType>
               <FilePath>D:\nRF5_SDK_14.0.0\components\libraries\uart\retarget.c</FilePath>
-            </File>
-            <File>
-              <FileName>uart.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\00_lib\uart.c</FilePath>
-            </File>
-            <File>
-              <FileName>nrf52_uart.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\..\00_lib\nrf52_uart.c</FilePath>
             </File>
           </Files>
         </Group>
